# CLIant

./: .gitignore  LICENSE  README.md
cliant_c/: cliant.c  cliant.h
cliant_cpp/: Cliant.cpp  Cliant.hpp
example_c_linux/: Makefile  README.md  main.c
example_c_stm32L5/: CMakeLists.txt  Makefile  STM32L552ZETXQ_RAM.ld  arm-none-eabi-gcc.cmake  main.c
example_c_stm32L5/Core/Inc/: main.h  retarget.h  stm32l5xx_hal_conf.h  stm32l5xx_it.h
example_c_stm32L5/Core/Src/: cliant.c  retarget.c  stm32l5xx_hal_msp.c  stm32l5xx_it.c
example_c_stm32L5/User/CLIant/Inc/: cliant.h
example_c_stm32L5/User/Drivers/Inc/: leds.h
example_c_stm32L5/User/Drivers/Src/: leds.c
example_c_stm32L5/ld_config/: STM32L552ZETXQ_FLASH.ld
example_cpp_linux/: CliantExample.cpp  CliantExample.hpp  Makefile  README.md  main.cpp
